# argus

./: .env.example  .gitignore  PLAN_PART_2.md  README.md  amplify.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  exceptions.py  logging_config.py  main.py  metrics.py
backend/app/api/: chat.py  dependencies.py  errors.py  health.py  observability.py  openrouter_health.py  rate_limit.py  reports.py  router.py  runs.py  sessions.py
backend/app/db/: collections.py  mongo.py
backend/app/models/: __init__.py  base.py  chat.py  health.py  mongo_base.py  report.py  session.py  workflow.py
backend/app/repositories/: __init__.py  chat_repo.py  report_repo.py  session_repo.py  workflow_repo.py
backend/app/retrieval/: __init__.py  bm25.py  pack.py
backend/app/services/: __init__.py  chat_service.py  session_service.py  workflow_service.py
backend/app/workflow/: __init__.py  checkpointer.py  deps.py  events.py  graph.py  runner.py  schemas.py  state.py
backend/scripts/: run_workflow.py
backend/tests/: conftest.py  test_chat_api.py  test_chat_retrieval.py  test_hardening.py  test_health.py  test_naming_bridge.py  test_session_repo.py  test_sessions_api.py
backend/tests/workflow/: conftest.py  test_analyst_node.py  test_checkpointer.py  test_events.py  test_events_sse.py  test_llm_openrouter.py  test_planner_node.py  test_quality_check_routing.py  test_reporter_node.py  test_researcher_node.py  test_runner_end_to_end.py  test_runs_api.py  test_search_clients.py  test_signal_extractor_node.py  test_state.py  (+1 more)
(+133 files in other folders)
