[project]
name = "argus-backend"
version = "0.1.0"
description = "Argus — AI Research Copilot backend (FastAPI + LangGraph + MongoDB)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "motor>=3.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "structlog>=24.4",
    "langgraph>=1.2.5",
    "openai>=2.41.1",
    "tavily-python>=0.7.26",
    "beautifulsoup4>=4.15.0",
    "tenacity>=9.1.4",
    "msgpack>=1.2.0",
    "slowapi>=0.1.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "mongomock-motor>=0.0.34",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
